assets/styles.scss
/* ... */
.education > div {
    display: inline-block;
    text-align: left;
}

$timeline-color: #B0BEC5;
$timeline-width: 1px;
$timeline-transition: all 0.25s ease-in;
$timeline-item-card-bg: white;
$timeline-item-card: false;
$timeline-item-card-radius: 8px;

%clearfix {
    &::after,
    &::before {
      clear: both;
      content: '';
      display: block;
      width: 100%;
    }
  }

  // Timeline
.timeline {
    margin: 0 auto;
    padding: 0 10px;
    position: relative;
    transition: $timeline-transition;
    width: 100%;
    font-family: 'Open Sans', sans-serif;
    font-display: swap;

    &::before {
        background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), $theme-color, $theme-color, $theme-color);
        background-image:    -moz-linear-gradient(top, rgba(0,0,0,0), $theme-color, $theme-color, $theme-color);
        background-image:      -o-linear-gradient(top, rgba(0,0,0,0), $theme-color, $theme-color, $theme-color);
        background-image:         linear-gradient(top, rgba(0,0,0,0), $theme-color, $theme-color, $theme-color);
        content: '';
        height: 100%;
        left: 50%;
        position: absolute;
        top: 0;
        width: $timeline-width;
    }

    &::after {
        clear: both;
        content: '';
        display: table;
        width: 100%;
    }

    a {
        font-weight: bold;
        transition: $timeline-transition;

        &:hover {
            //box-shadow: 0 1px 0px 0px $timeline-item-font-color;
            transition: $timeline-transition;
        }
    }

    .timeline-item {
        margin-bottom: 50px;
        position: relative;
        @extend %clearfix;

        .timeline-icon {
            $icon-size: 28px;
            background-color: $theme-color;
            border-radius: 50%;
            width: $icon-size;
            height: $icon-size;
            left: 50%;
            top: 50%;
            margin-left: -($icon-size - $timeline-width)/2;
            margin-top: -$icon-size/2;
            overflow: hidden;
            position: absolute;
            color: white;
            text-align: center;
            border: 0.20rem solid white;
            box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 2px 0 rgba(0, 0, 0, 0.1);

            svg {
                margin-top: -1px;
            }
        }

        .timeline-content {
            color: $dark-theme-color !important;
            padding: 0;
            text-align: right;
            transition: $timeline-transition;
            width: 47%;

            p {
                font-size: 16px;
                line-height: 1.4;
                margin-bottom: 0;
            }

            span {
                font-weight: normal;
                opacity: 0.9;
            }

            h3 {
                color: $theme-color;
                text-shadow: 0 0 5px rgba($theme-color, 0.2);
            }

            h5 {
                font-size: 0.9rem;
            }

            .degree-type {
                color: $theme-color;
            }

            .timeline-content-date {
                font-size: 16px;
                font-weight: bold;
                margin-bottom: 0;
            }

            .timeline-content-month {
                font-size: rem-calc(14);
                text-transform: uppercase;
                font-weight: 400;
            }

            &.right {
                float: right;
                text-align: left;

                .timeline-date::before {
                    content: '\2014\00a0';
                }
            }

            &.left .timeline-date::after {
                content: '\00a0\2014';
            }
        }
    }
  }


@media screen and (max-width: 39.9375em) {
    .timeline {
        margin: 30px;
        padding: 0;
        width: 92%;

        &::before {
            left: 0;
        }

        .timeline-item {
            .timeline-content {
                float: right;
                text-align: left;
                width: 92%;

                &::before, &.right::before {
                    border-left: 0;
                    border-right: 7px solid $timeline-color;
                    left: 10%;
                    margin-left: -6px;
                }

                &.left .timeline-date::before {
                    content: '\2014\00a0';
                }

                &.left .timeline-date::after {
                    content: '';
                }
            }

            .timeline-icon {
                left: 0;
            }
        }
    }
}

footer {
    @include linear_gradient(top, rgba(0,0,0,0), rgba($theme-color, 0.05));
}

/*
#cookie-notice {
    padding: 0.5rem 1rem;
    display: none;
    text-align: center;
    position: fixed;
    bottom: 0;
    width: calc(100% - 2rem);
    background: #222; color: rgba(255,255,255,0.8);
}

#cookie-notice a {
    display: inline-block;
    cursor: pointer;
    margin-left: 0.5rem;
}

@media (max-width: 767px) {
    #cookie-notice span {
        display: block;
        padding-top: 3px;
        margin-bottom: 1rem;
    }

    #cookie-notice a {
        position: relative;
        bottom: 4px;
    }
}*/

